--- a/src/postorius/templates/postorius/system_information.html
+++ b/src/postorius/templates/postorius/system_information.html
@@ -7,7 +7,10 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Mailman System</h2>
+    <div class="page-header">
+       <h1>{% trans "Mailman System" %}</h1>
+    </div>
+
     <table class="table table-bordered table-striped">
         {% for key, value in configs %}
         <tr>
