--- a/src/postorius/templates/postorius/lists/pending_confirmations.html
+++ b/src/postorius/templates/postorius/lists/pending_confirmations.html
@@ -23,7 +23,13 @@
                 <tbody>
                     {% for request in paginated_requests.object_list %}
                     <tr>
-                        <td>{{ request.email }}</td>
+                      <td>
+                          {% if request.display_name %}
+                              "{{ request.display_name }}" &lt;{{ request.email }}&gt;
+                          {% else %}
+                              {{ request.email }}
+                          {% endif %}
+                      </td>
                         <td>
                             <a href="{% url 'handle_subscription_request' list.list_id request.token 'discard' %}" class="btn btn-xs btn-danger">{% trans 'Discard' %}</a>
                             <a href="{% url 'list_bans' list.list_id %}?email={{ request.email }}" class="btn btn-xs btn-danger">{% trans 'Ban' %}</a>
