--- a/src/postorius/templates/postorius/base.html
+++ b/src/postorius/templates/postorius/base.html
@@ -139,7 +139,7 @@
     </footer>
 
     <script src="{% static 'postorius/libs/jquery/jquery-1.11.3.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>        
+    <script src="{% static 'postorius/libs/popperjs/popper-v1.11.0.min.js' %}"></script>
     <script src="{% static 'postorius/libs/bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'django-mailman3/js/main.js' %}"></script>
     <script src="{% static 'postorius/js/script.js' %}"></script>
