Fix a bug where non-member options would show owner member's options
This happens when an address is subscribed both as a non-member and owner and
the FindMember's API would return a list and we would pick the first one. Fix
it by explicitly using the role in the query parameter.

--- a/src/postorius/templates/postorius/lists/members.html
+++ b/src/postorius/templates/postorius/lists/members.html
@@ -90,7 +90,7 @@
                                     </label>
                                   </td>
                                   <td>
-                                    <a href="{% url 'list_member_options' list.list_id member.email %}">{% trans 'Member Options' %}</a>
+                                    <a href="{% url 'list_member_options' list.list_id member.email %}?role=member">{% trans 'Member Options' %}</a>
                                   </td>
                                 {% elif role == 'nonmember' %}
                                   <td>
@@ -102,7 +102,7 @@
                                     </label>
                                   </td>
                                   <td>
-                                    <a href="{% url 'list_member_options' list.list_id member.email %}">{% trans 'Non-member Options' %}</a>
+                                    <a href="{% url 'list_member_options' list.list_id member.email %}?role=nonmember">{% trans 'Non-member Options' %}</a>
                                   </td>
                                   <td><a href="{% url 'remove_role' list.list_id role member.email %}" class="btn btn-xs btn-danger">{% trans 'Delete' %}</a></td>
                                 {% else %}
